# django-postalcode

./: LICENSE  README.rst  setup.cfg
postal_code/: choices.py  utils.py
