[metadata]
name = django-postalcode
version = 1.0
description = django-postalcode is a Django app to verify if the cap of a Nation is valid.
long_description = file readme.rst
url = https://github.com/Jessica-Chiara/django-postal_code
author = Jessica Chiara Catania, Rosario Amantia
license = BSD
license_files = LICENSE

[options]
include_package_data = true
packages = find:
python_requires = >= 3.6
install_requires =
    Django >= 3.2.2