[metadata]
name = django-postalcode
version = 1.7.3
description = django-postalcode
long_description = django-postalcode is a Django app to verify if the cap of a Nation is valid.
url = https://github.com/InnonationTeam/django-postalcode
author = Jessica Chiara Catania, Rosario Amantia, Gianluca Di Franco
license = BSD
license_files = LICENSE

[options]
include_package_data = true
packages = find:
python_requires = >= 3.6
install_requires =
    Django >= 2.2.0